--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
   "dependencies": {
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "fs": "^0.0.1-security",
     "mysql2": "^3.11.4",
+    "path": "^0.12.7",
     "sequelize": "^6.37.5"
   },
   "devDependencies": {
