--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "fs": "^0.0.1-security",
     "mysql2": "^3.11.4",
     "path": "^0.12.7",
-    "sequelize": "^6.37.5"
+    "sequelize": "^6.37.5",
+    "serialport": "^12.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.7"
