--- a/package.json
+++ b/package.json
@@ -24,8 +24,7 @@
     "mysql2": "^3.11.4",
     "path": "^0.12.7",
     "sequelize": "^6.37.5",
-    "serialport": "^12.0.0",
-    "socket.io": "^4.8.1"
+    "serialport": "^12.0.0"
   },
   "devDependencies": {
     "cross-env": "^7.0.3",
